crates/pacode-tui/tests/snapshots/snapshot_tests__state_01_100x30.snap
---
source: crates/pacode-tui/tests/snapshot_tests.rs
expression: view
---
"  ▄▄▀▀▀▀▀▀▄▄                                                       │Refactor TUI layout             "
"▄▀▀▀▀▀▀▀▀▀▀▀                                                       │ses_abcdef123                   "
"▀▀▀▀▀▀▀▀▀▀       pacode v0.1.0-dev                                 │                                "
"▀▀▀▀▀▀▀▀▀▀                                                         │PLAN                   1/4 · 40%"
"▀▀▀▀▀▀▀▀▀▀▀▄                                                       │[✓] Read codebase & analyze arc…"
"  ▀▀▀▀▀▀▀▀▀▀                                                       │[•] Implement TUI layout & widg…"
"                                                                   │    ▰▰▰▰▰▱▱▱ 60%                "
"▎ Refactor TUI layout and split into modules                       │[ ] Add key bindings & event lo…"
"                                                                   │[ ] Write unit tests & snapshot…"
"I'll help you organize the TUI crate with a persistent rail and    │AGENTS                       5 ●"
"separate dialog column.                                            │● main  thinking · 400ms        "
"                                                                   │○ codegen                       "
"▣ Read_file crates/pacode-tui/src/layout.rs ok 120ms               │  writing ui/rail.rs            "
"  │ pub fn compute(area: Rect) -> ScreenLayout...                  │  1m47s · ↓ 9.1k                "
"                                                                   │○ tester                        "
"                                                                   │  cargo test -p pacode-tui      "
"                                                                   │  23s · ↓ 4.2k                  "
"                                                                   │✓ indexer                       "
"                                                                   │  scanned 142 files             "
"                                                                   │  400ms · ↓ 12.0k               "
"                                                                   │✓ parser                        "
"                                                                   │  parsed syntax trees           "
"                                                                   │  400ms · ↓ 8.5k                "
"                                                                   │                                "
"[  C • • • • • • • • • ] thinking… · 400ms                         │                                "
"────────────────────────────────────────────────────────────────── │BACKGROUND                  1 ◍ "
"❯                                                                  │◍ cargo test --all 214/380      "
"────────────────────────────────────────────────────────────────── │       ~/zed/pacode:master      "
"Build · Claude 3 7 Sonnet | high /effort                    /model │                                "
"» ask before edits and commands       [1]········ · 10.7K · ctrl+p │                                "
