crates/pacode-tui/tests/snapshots/snapshot_tests__state_01_60x20.snap
---
source: crates/pacode-tui/tests/snapshot_tests.rs
expression: view
---
"▄▀▀▀▀▀▀▀▀▀▀▄                                                "
"▀▀▀▀▀▀▀▀▀      pacode v0.1.0-dev                            "
"▀▀▀▀▀▀▀▄▄                                                   "
"▀▀▀▀▀▀▀▀▀▀▀▀                                                "
"  ▀▀▀▀▀▀▀▀                                                  "
"                                                            "
"▎ Refactor TUI layout and split into modules                "
"                                                            "
"I'll help you organize the TUI crate with a persistent rail "
"and separate dialog column.                                 "
"                                                            "
"▣ Read_file crates/pacode-tui/src/layout.rs ok 120ms        "
"  │ pub fn compute(area: Rect) -> ScreenLayout...           "
"                                                            "
"[  C • • • • • • • • • ] thinking… · 400ms                  "
"────────────────────────────────────────────────────────────"
"❯                                                           "
"────────────────────────────────────────────────────────────"
"Build · Claude 3 7 Sonnet | high /effort              /model"
"» ask before edits and commands · ← 4 agents · 1 bg         "
