crates/pacode-tui/tests/snapshots/snapshot_tests__state_01_80x24.snap
---
source: crates/pacode-tui/tests/snapshot_tests.rs
expression: view
---
"  ▄▄▀▀▀▀▀▀▄▄                                       │Refactor TUI layout         "
"▄▀▀▀▀▀▀▀▀▀▀▀▀▄                                     │ses_abcdef123               "
"▀▀▀▀▀▀▀▀▀▀▀      pacode v0.1.0-dev                 │                            "
"▀▀▀▀▀▀▀▀▀▀▄                                        │PLAN               1/4 · 40%"
"▀▀▀▀▀▀▀▀▀▀▀▀▀▀                                     │[✓] Read codebase & analyze…"
"  ▀▀▀▀▀▀▀▀▀▀                                       │[•] Implement TUI layout & …"
"                                                   │    ▰▰▰▰▰▱▱▱ 60%            "
"▎ Refactor TUI layout and split into modules       │[ ] Add key bindings & even…"
"                                                   │[ ] Write unit tests & snap…"
"I'll help you organize the TUI crate with a        │AGENTS                   5 ●"
"persistent rail and separate dialog column.        │● main  thinking · 400ms    "
"                                                   │○ codegen  1m47s            "
"▣ Read_file crates/pacode-tui/src/layout.rs ok 120 │○ tester  23s               "
"  │ pub fn compute(area: Rect) -> ScreenLayout...  │✓ indexer  400ms            "
"                                                   │✓ parser  400ms             "
"                                                   │                            "
"                                                   │                            "
"                                                   │                            "
"[  C • • • • • • • • • ] thinking… · 400ms         │                            "
"────────────────────────────────────────────────── │BACKGROUND              1 ◍ "
"❯                                                  │◍ cargo test --all 214/380  "
"────────────────────────────────────────────────── │     ~/zed/pacode:master    "
"Build · Claude 3 7 Sonnet | high /effort    /model │                            "
"» ask before edits and commands                    │                            "
