crates/pacode-tui/tests/snapshots/snapshot_tests__state_02_120x34.snap
---
source: crates/pacode-tui/tests/snapshot_tests.rs
expression: view
---
" ▄▄▄▄▄     pacode v0.1.0-dev                                                           │Refactor TUI layout             "
"█ ▀ ██     claude-3-7-sonnet with high effort · anthropic                              │ses_abcdef123                   "
"███▀       /home/someone/zed/pacode                                                    │                                "
" ▀▀▀▀▀                                                                                 │PLAN                 1/4 · 40% ▸"
"                                                                                       │AGENTS                       5 ●"
"Using claude-3-7-sonnet (from /home/someone/.config/pacode/config.toml) · /model       │● main  thinking · 400ms        "
"                                                                                       │  ○ codegen  1m47s              "
"▎ Refactor TUI layout and split into modules                                           │  ○ tester  23s                 "
"                                                                                       │  ✓ indexer  400ms              "
"I'll help you organize the TUI crate with a persistent rail and separate dialog        │▸ ✓ parser                      "
"column.                                                                                │    parsed syntax trees         "
"                                                                                       │    400ms · ↓ 8.5k              "
"▣ Read_file crates/pacode-tui/src/layout.rs ok 120ms                                   │                                "
"  │ pub fn compute(area: Rect) -> ScreenLayout...                                      │                                "
"                                                                                       │                                "
"                                                                                       │                                "
"                                                                                       │                                "
"                                                                                       │                                "
"                                                                                       │                                "
"                                                                                       │                                "
"                                                                                       │                                "
"                                                                                       │                                "
"                                                                                       │                                "
"                                                                                       │                                "
"                                                                                       │                                "
"                                                                                       │                                "
"                                                                                       │                                "
"                                                                                       │                                "
"[  C • • • • • • • • • ] thinking… · 400ms                                             │                                "
"────────────────────────────────────────────────────────────────────────────────────── │BACKGROUND                  1 ◍ "
"❯                                                                                      │◍ cargo test --all 214/380      "
"────────────────────────────────────────────────────────────────────────────────────── │       ~/zed/pacode:master      "
"Build · Claude 3 7 Sonnet | high /effort                                        /model │       • pacode 0.1.0-dev       "
"» parser 4/5 · enter open · alt+b follow · esc clear                                   │                                "
