crates/pacode-tui/tests/snapshots/snapshot_tests__state_03_120x34.snap
---
source: crates/pacode-tui/tests/snapshot_tests.rs
expression: view
---
"pacode v0.1.0-dev                     │▸ codegen · 1m47s                               │Refactor TUI layout             "
"claude-3-7-sonnet with high effort · a│writing ui/rail.rs · ↓ 9.1k                     │ses_abcdef123                   "
"/home/someone/zed/pacode              │                                                │                                "
"                                      │▎ Update rail.rs with new layout                │PLAN                   1/4 · 40%"
"Using claude-3-7-sonnet (from /home/ha│                                                │[✓] Read codebase & analyze arc…"
"                                      │Here is the diff for rail rendering.            │[•] Implement TUI layout & widg…"
"▎ Refactor TUI layout and split into  │                                                │    ▰▰▰▰▰▱▱▱ 60%                "
"▎ modules                             │▣ Edit_file crates/pacode-tui/src/ui/rail.rs +6 │[ ] Add key bindings & event lo…"
"                                      │  │ --- a/rail.rs                               │[ ] Write unit tests & snapshot…"
"I'll help you organize the TUI crate  │  │ +++ b/rail.rs                               │AGENTS                       5 ●"
"with a persistent rail and separate   │  │ @@ -10,3 +10,5 @@                           │● main  thinking · 400ms        "
"dialog column.                        │  │ +use ratatui::Frame;                        │○ codegen                       "
"                                      │  │ -old_code();                                │  writing ui/rail.rs            "
"▣ Read_file crates/pacode-tui/src/layo│  │ +new_code();                                │  1m47s · ↓ 9.1k                "
"  │ pub fn compute(area: Rect) -> Scr…│                                                │○ tester                        "
"                                      │                                                │  cargo test -p pacode-tui      "
"                                      │                                                │  23s · ↓ 4.2k                  "
"                                      │                                                │✓ indexer                       "
"                                      │                                                │  scanned 142 files             "
"                                      │                                                │  400ms · ↓ 12.0k               "
"                                      │                                                │✓ parser                        "
"                                      │                                                │  parsed syntax trees           "
"                                      │                                                │  400ms · ↓ 8.5k                "
"                                      │                                                │                                "
"                                      │                                                │                                "
"                                      │                                                │                                "
"                                      │                                                │                                "
"                                      │                                                │                                "
"[  C • • • • • • • • • ] thinking… · …│                                                │                                "
"────────────────────────────────────────────────────────────────────────────────────── │BACKGROUND                  1 ◍ "
"❯                                                                                      │◍ cargo test --all 214/380      "
"────────────────────────────────────────────────────────────────────────────────────── │       ~/zed/pacode:master      "
"Build · Claude 3 7 Sonnet | high /effort                                        /model │       • pacode 0.1.0-dev       "
"» codegen · esc back · alt+b follow · s stop                                           │                                "
