crates/pacode-tui/tests/snapshots/snapshot_tests__state_03_replace_120x34.snap
---
source: crates/pacode-tui/tests/snapshot_tests.rs
expression: view
---
"○ agent codegen  ·  esc for the main chat                                              │Refactor TUI layout             "
"▎ Update rail.rs with new layout                                                       │ses_abcdef123                   "
"                                                                                       │                                "
"Here is the diff for rail rendering.                                                   │PLAN                   1/4 · 40%"
"                                                                                       │[✓] Read codebase & analyze arc…"
"▣ Edit_file crates/pacode-tui/src/ui/rail.rs +64 -12                                   │[•] Implement TUI layout & widg…"
"  │ --- a/rail.rs                                                                      │    ▰▰▰▰▰▱▱▱ 60%                "
"  │ +++ b/rail.rs                                                                      │[ ] Add key bindings & event lo…"
"  │ @@ -10,3 +10,5 @@                                                                  │[ ] Write unit tests & snapshot…"
"  │ +use ratatui::Frame;                                                               │AGENTS                       5 ●"
"  │ -old_code();                                                                       │● main  thinking… · 0s          "
"  │ +new_code();                                                                       │○ codegen                       "
"                                                                                       │  writing ui/rail.rs            "
"                                                                                       │  1m47s · ↓ 9.1k                "
"                                                                                       │○ tester                        "
"                                                                                       │  cargo test -p pacode-tui      "
"                                                                                       │  23s · ↓ 4.2k                  "
"                                                                                       │✓ indexer                       "
"                                                                                       │  scanned 142 files             "
"                                                                                       │  400ms · ↓ 12.0k               "
"                                                                                       │✓ parser                        "
"                                                                                       │  parsed syntax trees           "
"                                                                                       │  400ms · ↓ 8.5k                "
"                                                                                       │                                "
"                                                                                       │                                "
"                                                                                       │                                "
"                                                                                       │                                "
"                                                                                       │                                "
"[  C • • • • • • • • • ] thinking… · 0s                                                │                                "
"────────────────────────────────────────────────────────────────────────────────────── │BACKGROUND                  1 ◍ "
"❯                                                                                      │◍ cargo test --all 214/380      "
"────────────────────────────────────────────────────────────────────────────────────── │       ~/zed/pacode:master      "
"Build · Claude 3 7 Sonnet | high /effort                                        /model │                                "
"» codegen · esc back · alt+b follow · s stop                                           │                                "
