crates/pacode-tui/tests/snapshots/snapshot_tests__state_05_120x34.snap
---
source: crates/pacode-tui/tests/snapshot_tests.rs
expression: view
---
" ▄▄▄▄▄     pacode v0.1.0-dev                                                           │Refactor TUI layout             "
"█ ▀ ██     claude-3-7-sonnet with high effort · anthropic                              │ses_abcdef123                   "
"███▀     ┌ Background Tasks ───────────────────────────────────────────────┐           │                                "
" ▀▀▀▀▀   │▸ ✓ cargo build --release 3m02s                                  │           │PLAN                   1/4 · 40%"
"         │  ✗ npm run lint 100ms                                           │           │[✓] Read codebase & analyze arc…"
"Using cla│  ✓ tsc --noEmit 12s                                             │odel       │[•] Implement TUI layout & widg…"
"         │  ◍ cargo test --all 214/380                                     │           │    ▰▰▰▰▰▱▱▱ 60%                "
"▎ Refacto│                                                                 │           │[ ] Add key bindings & event lo…"
"         │                                                                 │           │[ ] Write unit tests & snapshot…"
"I'll help│                                                                 │log        │AGENTS                       5 ●"
"column.  │                                                                 │           │● main  thinking · 400ms        "
"         │                                                                 │           │○ codegen                       "
"▣ Read_fi│                                                                 │           │  writing ui/rail.rs            "
"  │ pub f│                                                                 │           │  1m47s · ↓ 9.1k                "
"         │                                                                 │           │○ tester                        "
"         │                                                                 │           │  cargo test -p pacode-tui      "
"         │                                                                 │           │  23s · ↓ 4.2k                  "
"         │                                                                 │           │✓ indexer                       "
"         │                                                                 │           │  scanned 142 files             "
"         │                                                                 │           │  400ms · ↓ 12.0k               "
"         │                                                                 │           │✓ parser                        "
"         │                                                                 │           │  parsed syntax trees           "
"         │                                                                 │           │  400ms · ↓ 8.5k                "
"         │                                                                 │           │                                "
"         │                                                                 │           │                                "
"         │                                                                 │           │                                "
"         └ enter open · k kill · esc close ────────────────────────────────┘           │BACKGROUND           1 ◍ 2 ✓ 1 ✗"
"                                                                                       │✓ cargo build --release 3m02s   "
"[  C • • • • • • • • • ] thinking… · 400ms                                             │✗ npm run lint 3 err            "
"────────────────────────────────────────────────────────────────────────────────────── │✓ tsc --noEmit 12s              "
"❯                                                                                      │◍ cargo test --all 214/380      "
"────────────────────────────────────────────────────────────────────────────────────── │       ~/zed/pacode:master      "
"Build · Claude 3 7 Sonnet | high /effort                                        /model │       • pacode 0.1.0-dev       "
"» 1 bg running · 1 failed · enter output · k kill · esc                                │                                "
