crates/pacode-tui/tests/snapshots/snapshot_tests__state_06_120x34.snap
---
source: crates/pacode-tui/tests/snapshot_tests.rs
expression: view
---
"  ▄▄▀▀▀▀▄▄                                                                             │Refactor TUI layout             "
" ▀▀▀▀▀▀▀▀▀▀                                                                            │ses_abcdef123                   "
"▀▀▀▀▀▀▀▀▀▀     pacode v0.1.0-dev                                                       │                                "
"▀▀▀▀▀▀▀▄▄▄                                                                             │PLAN                   1/4 · 40%"
" ▀▀▀▀▀▀▀▀▀▀                                                                            │[✓] Read codebase & analyze arc…"
"  ▀▀▀▀▀▀▀▀                                                                             │[•] Implement TUI layout & widg…"
"                                                                                       │    ▰▰▰▰▰▱▱▱ 60%                "
"▎ Refactor TUI layout and split into modules                                           │[ ] Add key bindings & event lo…"
"                                                                                       │[ ] Write unit tests & snapshot…"
"I'll help you organize the TUI crate with a persistent rail and separate dialog        │in 214.0k  out 12.4k  think 8.1k"
"column.                                                                                │cache hit 71.0%  r 152.0k / w 61"
"                                                                                       │18 turns · $1.84                "
"▣ Read_file crates/pacode-tui/src/layout.rs ok 120ms                                   │ctx 10700 · 1% used             "
"  │ pub fn compute(area: Rect) -> ScreenLayout...                                      │                                "
"                                                                                       │AGENTS  4 done                  "
"                                                                                       │✓ codegen 1m47s · 9.1k          "
"                                                                                       │✓ tester 23s · 4.2k             "
"                                                                                       │✓ indexer 400ms · 12.0k         "
"                                                                                       │✓ parser 400ms · 8.5k           "
"                                                                                       │                                "
"                                                                                       │                                "
"                                                                                       │                                "
"                                                                                       │                                "
"                                                                                       │                                "
"                                                                                       │                                "
"                                                                                       │                                "
"                                                                                       │                                "
"                                                                                       │                                "
"                                                                                       │                                "
"────────────────────────────────────────────────────────────────────────────────────── │                                "
"❯                                                                                      │                                "
"────────────────────────────────────────────────────────────────────────────────────── │       ~/zed/pacode:master      "
"Build · Claude 3 7 Sonnet | high /effort                                        /model │                                "
"» ask before edits and commands · 5 agents done · 1m59s                 10.7K · ctrl+p │                                "
